--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-# Built application files
-*.apk
-*.ap_
-*.aab
-
-# Local configuration file (sdk path, etc)
-local.properties
+#Irina Posokhova
 
 # Gradle files
 .gradle/
@@ -20,13 +14,3 @@ local.properties
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-# Version control
-vcs.xml
-
-# lint
-lint/intermediates/
-lint/generated/
-lint/outputs/
-lint/tmp/
-lint/reports/
